tests/NormalTests/paczka1/fuzzy1/10587019.err
Error in line 2: 4RdREqhCA61964,7
Error in line 3: TcM S86 31,1
Error in line 7: oxc S631 34,8
Error in line 15: A619 A619 57,8
Error in line 33: 4RdREqhC A619 5,5
Error in line 27: SvDyqto A619 67,2
